[package]
name = "async-operation"
version = "0.1.0"
authors = ["IWANABETHATGUY <974153916@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.0"
regex = "1.0"
tokio = "0.1"
hyper = "0.12"
hyper-staticfile = "0.3"
rand = "0.5"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.1"
serde = "1.0"
queryst = "2.0"
image = "0.20"
futures-cpupool = "0.1"
actix = "0.7"
failure = "0.1"
syslog = "5.0"

bytes = "0.5.4"